FIX Header text align on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header {
     align-items: center;
     gap:10px;
     max-inline-size: 65ch;
+    text-align: center;
 }
 
 h1 {
